--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@ out/
 log/*.log
 tmp/**
 images
+!images/jobprotocol.png
 node_modules/
 slideshow/slides/*.md
-!slideshow/slides/next50.md
-!slideshow/slides/demo.md
+!slideshow/slides/job.md
 slideshow/course.html
 .sass-cache
 css/reveal.min.css
